# substrait-expr

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  release_plz.toml
.github/workflows/: build_test.yml  release.yml
substrait-expr/: CHANGELOG.md  Cargo.toml  build.rs
substrait-expr-funcgen/: CHANGELOG.md  Cargo.toml
substrait-expr-funcgen/src/: lib.rs
substrait-expr-macros/: Cargo.toml
substrait-expr-macros/src/: lib.rs
substrait-expr-python/: Cargo.toml  pyproject.toml
substrait-expr-python/python/substrait_expr/: __init__.py  _internal.pyi
substrait-expr-python/python/tests/: test_schema.py
substrait-expr-python/src/: lib.rs
substrait-expr/src/: builder.rs  error.rs  helpers.rs  lib.rs  util.rs
substrait-expr/src/builder/: functions.rs  schema.rs  types.rs
substrait-expr/src/helpers/: expr.rs  literals.rs  registry.rs  schema.rs  types.rs
substrait-expr/tests/: integration_test.rs
