[workspace]

members = [
    "substrait-expr",
    "substrait-expr-funcgen",
    "substrait-expr-macros",
    "substrait-expr-python",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Weston Pace <weston.pace@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/westonpace/substrait-expr"
readme = "README.md"
description = "Utilities for working with Substrait expressions"

[workspace.dependencies]
substrait-expr = { path = "./substrait-expr" }
substrait-expr-funcgen = { path = "./substrait-expr-funcgen" }
substrait-expr-macros = { path = "./substrait-expr-macros" }
