[workspace]

members = ["substrait-expr", "substrait-expr-funcgen", "substrait-expr-macros"]
resolver = "2"

[workspace.package]
authors = ["Weston Pace <weston.pace@gmail.com>"]
description = "Utilities for working with Substrait expressions"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/westonpace/substrait-expr"
version = "0.2.2"

[workspace.dependencies]
substrait-expr-funcgen = { path = "./substrait-expr-funcgen", version = "0.2.1" }
substrait-expr-macros = { path = "./substrait-expr-macros", version = "0.2.1" }
substrait = { version = "0.49.1" }
