[package]
name = "substrait-expr-funcgen"
description = "Utilities for automatically generating code from Substrait YAML files"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
convert_case = "0.6.0"
prettyplease = "0.2.16"
proc-macro2 = "1.0.67"
quote = "1.0.33"
serde_yaml = "0.9.30"
substrait.workspace = true
syn = "2.0.48"
thiserror = "1.0.56"
