[package]
name = "substrait-expr-macros"
description = "helper macros for working with substrait expressions"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }

[lib]
proc-macro = true
