[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "substrait-expr"
readme.workspace = true
repository.workspace = true
version.workspace = true

include = [
  "build.rs",
  "src/**/*.rs",
  "tests/**/*.rs",
  "substrait/LICENSE",
  "substrait/README.md",
  "substrait/extensions/**/*.yaml",
]

[dependencies]
chrono = {version = "0.4.31", default-features = false, optional = true}
once_cell = "1.19.0"
prost = "0.12.3"
substrait-expr-macros.workspace = true
substrait.workspace = true
thiserror = "1.0.50"

[build-dependencies]
substrait-expr-funcgen.workspace = true

[features]
chrono = ["dep:chrono"]
