[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "substrait-expr"
readme.workspace = true
repository.workspace = true
version.workspace = true

include = [
  "build.rs",
  "src/**/*.rs",
  "tests/**/*.rs",
  "substrait/LICENSE",
  "substrait/README.md",
  "substrait/extensions/**/*.yaml",
]

[dependencies]
once_cell = "1.19.0"
prost = "0.12.3"
substrait = "0.20.2"
substrait-expr-macros = {path = "../substrait-expr-macros", version = "0.2.0"}
thiserror = "1.0.50"

[build-dependencies]
substrait-expr-funcgen = {path = "../substrait-expr-funcgen", version = "0.2.0"}
