[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "substrait-expr"
readme.workspace = true
repository.workspace = true
version.workspace = true

include = [
  "build.rs",
  "src/**/*.rs",
  "tests/**/*.rs",
  "substrait/LICENSE",
  "substrait/README.md",
  "substrait/extensions/**/*.yaml",
]

[dependencies]
substrait.workspace = true
substrait-expr-macros.workspace = true
once_cell = "1.19.0"
prost = "0.13.3"
thiserror = "2.0.3"

[build-dependencies]
substrait-expr-funcgen = { path = "../substrait-expr-funcgen", version = "0.2.4" }
